# byteseq

./: Cargo.toml
src/: config.rs  main.rs  player.rs
src/player/: mod.rs  playback.rs
